fix: header spacing

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ button:hover {
 }
 
 #menu-button {
-    margin: 0px 24px 0px 0px;
+    margin: 0px var(--gap) 0px 0px;
     font-weight: 100;
 }
 
